--- a/BlazorApp3/Client/BlazorApp3.Client.csproj
+++ b/BlazorApp3/Client/BlazorApp3.Client.csproj
@@ -21,7 +21,10 @@
 	<AnalysisLevel>6.0</AnalysisLevel>
 	<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 	<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
-	<Version>2021.9.29.1051</Version>
+	  <Version>1.5</Version>
+	  <AssemblyVersion>1.5.*</AssemblyVersion>
+	  <Deterministic>false</Deterministic>
+	
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
