--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -36,8 +36,8 @@ jobs:
       #      run: dotnet restore MauiApp2.sln
       #    - name: Test with the dotnet CLI
       #      run: dotnet test MauiApp2.sln
-      - name: Formating
-        run: dotnet format --no-restore MauiApp2.sln
+#      - name: Formating
+#        run: dotnet format --no-restore MauiApp2.sln
 
       #    - name: Install maui
       #      run: |
