--- a/BlazorApp3/Shared/BlazorApp3.Shared.csproj
+++ b/BlazorApp3/Shared/BlazorApp3.Shared.csproj
@@ -29,9 +29,9 @@
 		<PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2453" />
 		<PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
 		<PackageReference Include="Google.Cloud.Storage.V1" Version="3.5.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-rc.1.21452.15" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.0-rc.1.21452.15" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0-rc.1.21451.13" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0-rtm.21509.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.0-rtm.21509.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0-rtm.21508.16" />
 		<PackageReference Include="PayoutsSdk" Version="1.1.1" />
 		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
 		<PackageReference Include="PayPalHttp" Version="1.0.1" />
