--- a/BlazorApp3/MauiApp2/MauiApp2.csproj
+++ b/BlazorApp3/MauiApp2/MauiApp2.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-ios;net6.0-android;net6.0-maccatalyst</TargetFrameworks>
-		 <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks> 
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) and '$(MSBuildRuntimeType)' == 'Full'">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<RootNamespace>MauiApp2</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -11,10 +11,10 @@
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
 		<SignAssembly>true</SignAssembly>
-		<Version>1.5</Version>
-		<AssemblyVersion>1.5.*</AssemblyVersion>
+		<Version>2.0</Version>
+		<AssemblyVersion>2.0.*</AssemblyVersion>
 		<Deterministic>false</Deterministic>
-		
+
 		<!-- Display name -->
 		<ApplicationTitle>MauiApp2</ApplicationTitle>
 
@@ -22,7 +22,7 @@
 		<ApplicationId>com.companyname.MauiApp2</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationVersion>1.0</ApplicationVersion>
+		<ApplicationVersion>1</ApplicationVersion>
 		<AndroidVersionCode>1</AndroidVersionCode>
 
 		<!-- Required for C# Hot Reload -->
@@ -62,7 +62,85 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Shared\BlazorApp3.Shared.csproj" />
+		<MauiCss Remove="Pages\AdminAccountManagement.razor.css" />
+		<MauiCss Remove="Pages\BanAccount.razor.css" />
+		<MauiCss Remove="Pages\Contact.razor.css" />
+		<MauiCss Remove="Pages\CreateStudio.razor.css" />
+		<MauiCss Remove="Pages\DeleteMovieAdmin.razor.css" />
+		<MauiCss Remove="Pages\DeleteMovieStudio.razor.css" />
+		<MauiCss Remove="Pages\EditAccount.razor.css" />
+		<MauiCss Remove="Pages\EditMovieAdmin.razor.css" />
+		<MauiCss Remove="Pages\EditMovieStudio.razor.css" />
+		<MauiCss Remove="Pages\Login.razor.css" />
+		<MauiCss Remove="Pages\MovieAdmin.razor.css" />
+		<MauiCss Remove="Pages\MovieStudio.razor.css" />
+		<MauiCss Remove="Pages\Profile.razor.css" />
+		<MauiCss Remove="Pages\ResetPassword.razor.css" />
+		<MauiCss Remove="Pages\SignUp.razor.css" />
+		<MauiCss Remove="Shared\MainLayout.razor.css" />
+		<MauiCss Remove="Shared\NavMenu.razor.css" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Pages\AdminAccountManagement.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\BanAccount.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\Contact.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\CreateStudio.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\DeleteMovieAdmin.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\DeleteMovieStudio.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\EditAccount.razor.css" />
+		<Content Include="Pages\EditMovieAdmin.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\EditMovieStudio.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\Login.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\MovieAdmin.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\MovieStudio.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\Profile.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\ResetPassword.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Pages\SignUp.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Shared\MainLayout.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Shared\NavMenu.razor.css">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Shared\BlazorApp3.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Update="Shared\NavMenu.razor">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 </Project>
