--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -21,6 +21,8 @@ jobs:
       #      uses: actions/setup-dotnet@v1
       #      with:
       #         dotnet-version: 5.x
+      - name: Dotnet Restore
+        run: dotnet restore
       - name: Install format
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
       - name: Install tools
