--- a/BlazorApp3/MauiApp2/MauiApp2.csproj
+++ b/BlazorApp3/MauiApp2/MauiApp2.csproj
@@ -12,9 +12,7 @@
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
 		<SignAssembly>true</SignAssembly>
-		<Version>2.1</Version>
-		<AssemblyVersion>2.1.0.*</AssemblyVersion>
-		<Deterministic>false</Deterministic>
+		<RunAOTCompilation>true</RunAOTCompilation>
 
 		<!-- Display name -->
 		<ApplicationTitle>MauiApp2</ApplicationTitle>
