--- a/RazorClassLibrary1/RazorClassLibrary1.csproj
+++ b/RazorClassLibrary1/RazorClassLibrary1.csproj
@@ -1,19 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
+	  <SignAssembly>true</SignAssembly>
+	  <AnalysisLevel>6.0</AnalysisLevel>
+	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+	  <Version>2.1</Version>
+	  <AssemblyVersion>2.1.0.*</AssemblyVersion>
+	  <Deterministic>false</Deterministic>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <SupportedPlatform Include="browser" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-rc.2.21480.10" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorApp3\Shared\BlazorApp3.Shared.csproj" />
