--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
       - name: Install tools
         run: |
-          dotnet workload install wasm-tools maui android-aot ios maccatalyst macos tvos
+          dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       #    - name: Install dependencies
       #      run: dotnet restore BlazorApp3.sln
       #- name: Test with the dotnet CLI
@@ -34,7 +34,7 @@ jobs:
       - name: Dotnet Restore
         run: dotnet restore
       - name: Formating
-        run: dotnet format analyzers --no-restore BlazorApp3.sln
+        run: dotnet format analyzers --no-restore
       #    - name: Install dependencies
       #      run: dotnet restore MauiApp2.sln
       #    - name: Test with the dotnet CLI
