.NET 6 Update and bootstrap 5.1.3 Update
This commit is fully tested. Please commit your new update behind this update. Do not merge this commit

--- a/BlazorMovie/MovieClient/MovieClient.csproj
+++ b/BlazorMovie/MovieClient/MovieClient.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,20 +6,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
 	  <UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
 	  <SignAssembly>true</SignAssembly>
-	  <AnalysisLevel>6.0</AnalysisLevel>
 	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-	  <Version>2.5</Version>
-	  <AssemblyVersion>2.5.0.*</AssemblyVersion>
+	  <Version>3.0</Version>
+	  <AssemblyVersion>3.0.0.*</AssemblyVersion>
 	  <Deterministic>false</Deterministic>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
-  </ItemGroup>
 
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
   </ItemGroup>
 
 </Project>
