--- a/BlazorMovie/Server/Properties/launchSettings.json
+++ b/BlazorMovie/Server/Properties/launchSettings.json
@@ -3,8 +3,8 @@
       "windowsAuthentication": false,
       "anonymousAuthentication": true,
       "iisExpress": {
-        "applicationUrl": "http://localhost:19089",
-        "sslPort": 44393
+        "applicationUrl": "http://localhost:40482",
+        "sslPort": 44360
       }
     },
     "profiles": {
@@ -13,7 +13,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "https://localhost:5001",
+        "applicationUrl": "https://localhost:7183;http://localhost:5183",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
