--- a/BlazorMovie/Server/BlazorMovie.Server.csproj
+++ b/BlazorMovie/Server/BlazorMovie.Server.csproj
@@ -4,36 +4,34 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	  <SignAssembly>true</SignAssembly>
 	  <UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
-	  <AnalysisLevel>6.0</AnalysisLevel>
 	  <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 	  <SignAssembly>True</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
-	  <PackageReference Include="Braintree" Version="5.9.0" />
-	  <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
-	  <PackageReference Include="FirebaseAuthentication.net" Version="4.0.0-alpha.2" />
-	  <PackageReference Include="FirebaseDatabase.net" Version="4.0.6" />
-	  <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
-	  <PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2481" />
-	  <PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
-	  <PackageReference Include="Google.Cloud.Storage.V1" Version="3.6.0" />
-
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0" />
-
-	  <PackageReference Include="Microsoft.ML" Version="1.7.0-preview.final" />
-	  <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0-preview.final" />
-	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-	  <PackageReference Include="PayoutsSdk" Version="1.1.1" />
-	  <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
-	  <PackageReference Include="PayPalHttp" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
   </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
+		<PackageReference Include="Braintree" Version="5.9.0" />
+		<PackageReference Include="FirebaseAdmin" Version="2.2.0" />
+		<PackageReference Include="FirebaseAuthentication.net" Version="4.0.0-alpha.2" />
+		<PackageReference Include="FirebaseDatabase.net" Version="4.0.6" />
+		<PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+		<PackageReference Include="Google.Apis.Drive.v3" Version="1.55.0.2481" />
+		<PackageReference Include="Google.Cloud.Firestore" Version="2.4.0" />
+		<PackageReference Include="Google.Cloud.Storage.V1" Version="3.6.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0" />
+		<PackageReference Include="Microsoft.ML" Version="1.7.0-preview.final" />
+		<PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0-preview.final" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="PayoutsSdk" Version="1.1.1" />
+		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
+		<PackageReference Include="PayPalHttp" Version="1.0.1" />
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\BlazorMovie.Client.csproj" />
     <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
