--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install format
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
-      #- name: Install tools
-      #  run: dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+      - name: Install tools
+        run: dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       #    - name: Install dependencies
       #      run: dotnet restore BlazorApp3.sln
       #- name: Test with the dotnet CLI
