--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,10 @@ jobs:
         dotnet-version: 6.x
         include-prerelease: true
     - name: Install tools
-      run: dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+      run: |
+        dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+        winget search Microsoft.OpenJDK
+        winget install Microsoft.OpenJDK.17
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
