--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,10 +18,14 @@ jobs:
       with:
         dotnet-version: 6.x
         include-prerelease: true
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'temurin'
+        java-version: '17'
     - name: Install tools
       run: |
         dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
-        winget search Microsoft.OpenJDK
+        git clone https://git.openjdk.java.net/jdk/
         winget install Microsoft.OpenJDK.17
     - name: Restore dependencies
       run: dotnet restore
