--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,14 +19,14 @@ jobs:
         with:
           dotnet-version: 6.x
           include-prerelease: true
-      - name: Install tools
-        run: dotnet workload install wasm-tools
-      - name: publish
+      #- name: Install tools
+       # run: dotnet workload install wasm-tools
+     # - name: publish
         run: |
-          dotnet publish BlazorMovie/Server/BlazorMovie.Server.csproj -o publish
-      - name: Commit files
-        if: steps.format.outputs.has-changes == 'true'
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git commit -a -m 'publish dev lastest'
+       #   dotnet publish BlazorMovie/Server/BlazorMovie.Server.csproj -o publish
+    #  - name: Commit files
+      #  if: steps.format.outputs.has-changes == 'true'
+     #   run: |
+     #     git config --local user.name "github-actions[bot]"
+      #    git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        #  git commit -a -m 'publish dev lastest'
