--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,13 +2,15 @@ name: Format
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches: 
+      - main
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
       - uses: actions/checkout@v2
