--- a/BlazorMovie/Server/Properties/launchSettings.json
+++ b/BlazorMovie/Server/Properties/launchSettings.json
@@ -13,7 +13,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "https://localhost:7183;http://localhost:5183",
+        "applicationUrl": "https://localhost:7183;http://localhost:5183;https://localhost:5001",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
