Revert "Merge branch 'main' of https://github.com/Thuyen21/Blazor-Movie-"
This reverts commit 6271208776fbd7ede964b4853d30c98768707276, reversing
changes made to 3306266ab4628ef2d06095fd60ffa7d1259c07c3.

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,16 +1,14 @@
-name: Format
+name: .NET
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches: 
-      - main
+    branches: [main]
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v2
