Revert "Revert "Merge branch 'main' of https://github.com/Thuyen21/Blazor-Movie-""
This reverts commit 86e12fbfba7b06322068f5d86892aa2901e1a67f.

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,14 +1,16 @@
-name: .NET
+name: Format
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches: 
+      - main
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
       - uses: actions/checkout@v2
