--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           dotnet-version: 6.x
           include-prerelease: true
+      - uses: actions/setup-java@v2
+        with:
+          distribution: "temurin"
+          java-version: "11"
 
       - name: Install format
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
