--- a/BlazorMovie/Maui/BlazorMovie.Maui.csproj
+++ b/BlazorMovie/Maui/BlazorMovie.Maui.csproj
@@ -7,11 +7,15 @@
 		<RootNamespace>Maui</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
 		<EnableDefaultCssItems>false</EnableDefaultCssItems>
 		<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
 		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 		<SignAssembly>True</SignAssembly>
+		<AnalysisLevel>preview</AnalysisLevel>
+		<AotAssemblies>true</AotAssemblies>
+		<RunAOTCompilation>true</RunAOTCompilation>
 		
 		<!-- Display name -->
 		<ApplicationTitle>Maui</ApplicationTitle>
