--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -17,8 +17,9 @@ jobs:
           include-prerelease: true
       - uses: actions/setup-java@v2
         with:
-          distribution: "temurin"
+          distribution: "adopt"
           java-version: "11"
+          check-latest: true
 
       - name: Install format
         run: dotnet tool install -g dotnet-format --version "7.0.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json
