--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,17 +15,18 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.x
+          dotnet-version: "6.0.x"
           include-prerelease: true
+
       - uses: actions/setup-java@v2
         with:
           distribution: "adopt"
           java-version: "11"
           check-latest: true
 
-      - name: Install tools
-        run: |
-          dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
+      # - name: Install tools
+      #   run: |
+      #     dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
