--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload update
-        #  android ios maccatalyst tvos macos maui
+          dotnet workload restore
+        #  android ios maccatalyst tvos macos maui wasm-tools
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
